c_src_codegen/c_parser.output
Terminals unused in grammar

   T_COLON


State 183 conflicts: 1 shift/reduce
State 194 conflicts: 2 shift/reduce
State 201 conflicts: 1 shift/reduce
State 210 conflicts: 2 shift/reduce


Grammar

    0 $accept: ROOT $end

    1 ROOT: PROGRAM

    2 PROGRAM: %empty
    3        | PROGRAM STATEMENT

    4 STATEMENT: DECLARATION
    5          | ASSIGNMENT
    6          | CONTROL
    7          | JUMP

    8 STATEMENT_LIST: %empty
    9               | STATEMENT_LIST STATEMENT

   10 DECLARATION: FUNC_DECLARATION
   11            | VAR_DECLARATION

   12 FUNC_DECLARATION: VAR_DECLARATION T_LBRACKET ARGUMENT_LIST_DEC T_RBRACKET T_LCURLBRACKET STATEMENT_LIST T_RCURLBRACKET

   13 VAR_DECLARATION: T_INT VALUE_FOR_STORE
   14                | T_INT VALUE_FOR_STORE T_SEMICOLON
   15                | T_VOID VALUE_FOR_STORE
   16                | T_VOID VALUE_FOR_STORE T_SEMICOLON
   17                | T_CHAR VALUE_FOR_STORE
   18                | T_CHAR VALUE_FOR_STORE T_SEMICOLON
   19                | T_SHORT VALUE_FOR_STORE
   20                | T_SHORT VALUE_FOR_STORE T_SEMICOLON
   21                | T_INT ARRAY_FOR_STORE
   22                | T_INT ARRAY_FOR_STORE T_SEMICOLON
   23                | T_CHAR ARRAY_FOR_STORE
   24                | T_CHAR ARRAY_FOR_STORE T_SEMICOLON
   25                | T_SHORT ARRAY_FOR_STORE
   26                | T_SHORT ARRAY_FOR_STORE T_SEMICOLON

   27 ARGUMENT_LIST_DEC: %empty
   28                  | ARGUMENT_DEC
   29                  | ARGUMENT_LIST_DEC T_COMMA ARGUMENT_DEC

   30 ARGUMENT_LIST_CALL: %empty
   31                   | ARGUMENT_CALL
   32                   | ARGUMENT_LIST_CALL T_COMMA ARGUMENT_CALL

   33 ARGUMENT_DEC: VAR_DECLARATION
   34             | VALUE_FOR_STORE

   35 ARGUMENT_CALL: VALUE

   36 ASSIGNMENT: ASSIGN T_SEMICOLON

   37 ASSIGN: CONTAINER T_ASSIGN LOGIC
   38       | CONTAINER T_ADDASSIGN LOGIC
   39       | CONTAINER T_SUBASSIGN LOGIC
   40       | CONTAINER T_MULTASSIGN LOGIC
   41       | CONTAINER T_DIVASSIGN LOGIC
   42       | CONTAINER T_MODASSIGN LOGIC
   43       | CONTAINER T_ANDASSIGN LOGIC
   44       | CONTAINER T_ORASSIGN LOGIC
   45       | CONTAINER T_XORASSIGN LOGIC
   46       | CONTAINER T_SLLASSIGN LOGIC
   47       | CONTAINER T_SRLASSIGN LOGIC
   48       | VALUE T_INCREMENT
   49       | VALUE T_DECREMENT

   50 CONTAINER: VAR_DECLARATION
   51          | VALUE_FOR_STORE
   52          | ARRAY_FOR_STORE

   53 JUMP: RETURN
   54     | FUNC_EVOKE T_SEMICOLON
   55     | T_LABEL
   56     | T_GOTO T_VARIABLE T_SEMICOLON

   57 RETURN: T_RETURN LOGIC T_SEMICOLON

   58 CONTROL: ELSE
   59        | IF
   60        | T_WHILE T_LBRACKET LOGIC T_RBRACKET T_LCURLBRACKET STATEMENT_LIST T_RCURLBRACKET
   61        | T_FOR T_LBRACKET ASSIGN T_SEMICOLON LOGIC T_SEMICOLON ASSIGN T_RBRACKET T_LCURLBRACKET STATEMENT_LIST T_RCURLBRACKET
   62        | T_FOR T_LBRACKET LOGIC T_SEMICOLON ASSIGN T_RBRACKET T_LCURLBRACKET STATEMENT_LIST T_RCURLBRACKET
   63        | T_DO T_LCURLBRACKET STATEMENT_LIST T_RCURLBRACKET T_WHILE T_LBRACKET LOGIC T_RBRACKET T_SEMICOLON

   64 IF: T_IF T_LBRACKET LOGIC T_RBRACKET T_LCURLBRACKET STATEMENT_LIST T_RCURLBRACKET ELSE_IF_LIST
   65   | T_IF T_LBRACKET LOGIC T_RBRACKET STATEMENT ELSE_IF_LIST

   66 ELSE: T_IF T_LBRACKET LOGIC T_RBRACKET T_LCURLBRACKET STATEMENT_LIST T_RCURLBRACKET ELSE_IF_LIST T_ELSE T_LCURLBRACKET STATEMENT_LIST T_RCURLBRACKET
   67     | T_IF T_LBRACKET LOGIC T_RBRACKET STATEMENT ELSE_IF_LIST T_ELSE T_LCURLBRACKET STATEMENT_LIST T_RCURLBRACKET
   68     | T_IF T_LBRACKET LOGIC T_RBRACKET T_LCURLBRACKET STATEMENT_LIST T_RCURLBRACKET ELSE_IF_LIST T_ELSE STATEMENT
   69     | T_IF T_LBRACKET LOGIC T_RBRACKET STATEMENT ELSE_IF_LIST T_ELSE STATEMENT

   70 ELSE_IF_LIST: %empty
   71             | ELSE_IF
   72             | ELSE_IF_LIST ELSE_IF

   73 ELSE_IF: T_ELSEIF T_LBRACKET LOGIC T_RBRACKET T_LCURLBRACKET STATEMENT_LIST T_RCURLBRACKET

   74 LOGIC: LOGIC2
   75      | T_LBRACKET LOGIC T_RBRACKET

   76 LOGIC2: LOGIC3
   77       | LOGIC T_OR LOGIC3

   78 LOGIC3: LOGIC4
   79       | LOGIC3 T_AND LOGIC4

   80 LOGIC4: LOGIC5
   81       | LOGIC4 T_BITOR LOGIC5

   82 LOGIC5: LOGIC6
   83       | LOGIC5 T_BITXOR LOGIC6

   84 LOGIC6: LOGIC7
   85       | LOGIC6 T_BITAND LOGIC7

   86 LOGIC7: LOGIC8
   87       | LOGIC7 T_EQUAL LOGIC8
   88       | LOGIC7 T_NOTEQUAL LOGIC8

   89 LOGIC8: SHIFT
   90       | LOGIC8 T_GREATER SHIFT
   91       | LOGIC8 T_EQGT SHIFT
   92       | LOGIC8 T_LESS SHIFT
   93       | LOGIC8 T_EQLT SHIFT

   94 SHIFT: EXPR
   95      | SHIFT T_SLL EXPR
   96      | SHIFT T_SRL EXPR

   97 EXPR: EXPR2
   98     | EXPR T_ADD EXPR2
   99     | EXPR T_SUB EXPR2

  100 EXPR2: VALUE_WITH_FUNC
  101      | EXPR2 T_MULT VALUE_WITH_FUNC
  102      | EXPR2 T_DIV VALUE_WITH_FUNC
  103      | EXPR2 T_MOD VALUE_WITH_FUNC

  104 VALUE_WITH_FUNC: FUNC_EVOKE
  105                | VALUE

  106 VALUE: ARRAY
  107      | T_NUMBER
  108      | T_SUB T_NUMBER
  109      | T_VARIABLE
  110      | T_MULT T_VARIABLE
  111      | T_CHAR_PRIMITIVE
  112      | T_ADDRESS

  113 ARRAY: T_VARIABLE T_LSQR T_NUMBER T_RSQR

  114 VALUE_FOR_STORE: T_VARIABLE
  115                | T_MULT T_VARIABLE

  116 ARRAY_FOR_STORE: T_VARIABLE T_LSQR T_NUMBER T_RSQR

  117 FUNC_EVOKE: VALUE T_LBRACKET ARGUMENT_LIST_CALL T_RBRACKET


Terminals, with rules where they appear

$end (0) 0
error (256)
T_ASSIGN (258) 37
T_ADDASSIGN (259) 38
T_SUBASSIGN (260) 39
T_MULTASSIGN (261) 40
T_DIVASSIGN (262) 41
T_MODASSIGN (263) 42
T_ANDASSIGN (264) 43
T_ORASSIGN (265) 44
T_XORASSIGN (266) 45
T_SLLASSIGN (267) 46
T_SRLASSIGN (268) 47
T_LBRACKET (269) 12 60 61 62 63 64 65 66 67 68 69 73 75 117
T_RBRACKET (270) 12 60 61 62 63 64 65 66 67 68 69 73 75 117
T_LCURLBRACKET (271) 12 60 61 62 63 64 66 67 68 73
T_RCURLBRACKET (272) 12 60 61 62 63 64 66 67 68 73
T_LSQR (273) 113 116
T_RSQR (274) 113 116
T_SEMICOLON (275) 14 16 18 20 22 24 26 36 54 56 57 61 62 63
T_COLON (276)
T_COMMA (277) 29 32
T_INT (278) 13 14 21 22
T_VOID (279) 15 16
T_CHAR (280) 17 18 23 24
T_SHORT (281) 19 20 25 26
T_RETURN (282) 57
T_GOTO (283) 56
T_IF (284) 64 65 66 67 68 69
T_ELSE (285) 66 67 68 69
T_WHILE (286) 60 63
T_FOR (287) 61 62
T_DO (288) 63
T_ELSEIF (289) 73
T_AND (290) 79
T_OR (291) 77
T_BITAND (292) 85
T_BITOR (293) 81
T_BITXOR (294) 83
T_SLL (295) 95
T_SRL (296) 96
T_ADD (297) 98
T_SUB (298) 99 108
T_MULT (299) 101 110 115
T_DIV (300) 102
T_MOD (301) 103
T_INCREMENT (302) 48
T_DECREMENT (303) 49
T_EQUAL (304) 87
T_NOTEQUAL (305) 88
T_LESS (306) 92
T_EQLT (307) 93
T_GREATER (308) 90
T_EQGT (309) 91
T_NUMBER (310) 107 108 113 116
T_VARIABLE (311) 56 109 110 113 114 115 116
T_LABEL (312) 55
T_CHAR_PRIMITIVE (313) 111
T_ADDRESS (314) 112


Nonterminals, with rules where they appear

$accept (60)
    on left: 0
ROOT (61)
    on left: 1, on right: 0
PROGRAM (62)
    on left: 2 3, on right: 1 3
STATEMENT (63)
    on left: 4 5 6 7, on right: 3 9 65 67 68 69
STATEMENT_LIST (64)
    on left: 8 9, on right: 9 12 60 61 62 63 64 66 67 68 73
DECLARATION (65)
    on left: 10 11, on right: 4
FUNC_DECLARATION (66)
    on left: 12, on right: 10
VAR_DECLARATION (67)
    on left: 13 14 15 16 17 18 19 20 21 22 23 24 25 26, on right: 11
    12 33 50
ARGUMENT_LIST_DEC (68)
    on left: 27 28 29, on right: 12 29
ARGUMENT_LIST_CALL (69)
    on left: 30 31 32, on right: 32 117
ARGUMENT_DEC (70)
    on left: 33 34, on right: 28 29
ARGUMENT_CALL (71)
    on left: 35, on right: 31 32
ASSIGNMENT (72)
    on left: 36, on right: 5
ASSIGN (73)
    on left: 37 38 39 40 41 42 43 44 45 46 47 48 49, on right: 36 61
    62
CONTAINER (74)
    on left: 50 51 52, on right: 37 38 39 40 41 42 43 44 45 46 47
JUMP (75)
    on left: 53 54 55 56, on right: 7
RETURN (76)
    on left: 57, on right: 53
CONTROL (77)
    on left: 58 59 60 61 62 63, on right: 6
IF (78)
    on left: 64 65, on right: 59
ELSE (79)
    on left: 66 67 68 69, on right: 58
ELSE_IF_LIST (80)
    on left: 70 71 72, on right: 64 65 66 67 68 69 72
ELSE_IF (81)
    on left: 73, on right: 71 72
LOGIC (82)
    on left: 74 75, on right: 37 38 39 40 41 42 43 44 45 46 47 57 60
    61 62 63 64 65 66 67 68 69 73 75 77
LOGIC2 (83)
    on left: 76 77, on right: 74
LOGIC3 (84)
    on left: 78 79, on right: 76 77 79
LOGIC4 (85)
    on left: 80 81, on right: 78 79 81
LOGIC5 (86)
    on left: 82 83, on right: 80 81 83
LOGIC6 (87)
    on left: 84 85, on right: 82 83 85
LOGIC7 (88)
    on left: 86 87 88, on right: 84 85 87 88
LOGIC8 (89)
    on left: 89 90 91 92 93, on right: 86 87 88 90 91 92 93
SHIFT (90)
    on left: 94 95 96, on right: 89 90 91 92 93 95 96
EXPR (91)
    on left: 97 98 99, on right: 94 95 96 98 99
EXPR2 (92)
    on left: 100 101 102 103, on right: 97 98 99 101 102 103
VALUE_WITH_FUNC (93)
    on left: 104 105, on right: 100 101 102 103
VALUE (94)
    on left: 106 107 108 109 110 111 112, on right: 35 48 49 105 117
ARRAY (95)
    on left: 113, on right: 106
VALUE_FOR_STORE (96)
    on left: 114 115, on right: 13 14 15 16 17 18 19 20 34 51
ARRAY_FOR_STORE (97)
    on left: 116, on right: 21 22 23 24 25 26 52
FUNC_EVOKE (98)
    on left: 117, on right: 54 104


State 0

    0 $accept: . ROOT $end

    $default  reduce using rule 2 (PROGRAM)

    ROOT     go to state 1
    PROGRAM  go to state 2


State 1

    0 $accept: ROOT . $end

    $end  shift, and go to state 3


State 2

    1 ROOT: PROGRAM .
    3 PROGRAM: PROGRAM . STATEMENT

    T_INT             shift, and go to state 4
    T_VOID            shift, and go to state 5
    T_CHAR            shift, and go to state 6
    T_SHORT           shift, and go to state 7
    T_RETURN          shift, and go to state 8
    T_GOTO            shift, and go to state 9
    T_IF              shift, and go to state 10
    T_WHILE           shift, and go to state 11
    T_FOR             shift, and go to state 12
    T_DO              shift, and go to state 13
    T_SUB             shift, and go to state 14
    T_MULT            shift, and go to state 15
    T_NUMBER          shift, and go to state 16
    T_VARIABLE        shift, and go to state 17
    T_LABEL           shift, and go to state 18
    T_CHAR_PRIMITIVE  shift, and go to state 19
    T_ADDRESS         shift, and go to state 20

    $default  reduce using rule 1 (ROOT)

    STATEMENT         go to state 21
    DECLARATION       go to state 22
    FUNC_DECLARATION  go to state 23
    VAR_DECLARATION   go to state 24
    ASSIGNMENT        go to state 25
    ASSIGN            go to state 26
    CONTAINER         go to state 27
    JUMP              go to state 28
    RETURN            go to state 29
    CONTROL           go to state 30
    IF                go to state 31
    ELSE              go to state 32
    VALUE             go to state 33
    ARRAY             go to state 34
    VALUE_FOR_STORE   go to state 35
    ARRAY_FOR_STORE   go to state 36
    FUNC_EVOKE        go to state 37


State 3

    0 $accept: ROOT $end .

    $default  accept


State 4

   13 VAR_DECLARATION: T_INT . VALUE_FOR_STORE
   14                | T_INT . VALUE_FOR_STORE T_SEMICOLON
   21                | T_INT . ARRAY_FOR_STORE
   22                | T_INT . ARRAY_FOR_STORE T_SEMICOLON

    T_MULT      shift, and go to state 38
    T_VARIABLE  shift, and go to state 39

    VALUE_FOR_STORE  go to state 40
    ARRAY_FOR_STORE  go to state 41


State 5

   15 VAR_DECLARATION: T_VOID . VALUE_FOR_STORE
   16                | T_VOID . VALUE_FOR_STORE T_SEMICOLON

    T_MULT      shift, and go to state 38
    T_VARIABLE  shift, and go to state 42

    VALUE_FOR_STORE  go to state 43


State 6

   17 VAR_DECLARATION: T_CHAR . VALUE_FOR_STORE
   18                | T_CHAR . VALUE_FOR_STORE T_SEMICOLON
   23                | T_CHAR . ARRAY_FOR_STORE
   24                | T_CHAR . ARRAY_FOR_STORE T_SEMICOLON

    T_MULT      shift, and go to state 38
    T_VARIABLE  shift, and go to state 39

    VALUE_FOR_STORE  go to state 44
    ARRAY_FOR_STORE  go to state 45


State 7

   19 VAR_DECLARATION: T_SHORT . VALUE_FOR_STORE
   20                | T_SHORT . VALUE_FOR_STORE T_SEMICOLON
   25                | T_SHORT . ARRAY_FOR_STORE
   26                | T_SHORT . ARRAY_FOR_STORE T_SEMICOLON

    T_MULT      shift, and go to state 38
    T_VARIABLE  shift, and go to state 39

    VALUE_FOR_STORE  go to state 46
    ARRAY_FOR_STORE  go to state 47


State 8

   57 RETURN: T_RETURN . LOGIC T_SEMICOLON

    T_LBRACKET        shift, and go to state 48
    T_SUB             shift, and go to state 14
    T_MULT            shift, and go to state 49
    T_NUMBER          shift, and go to state 16
    T_VARIABLE        shift, and go to state 50
    T_CHAR_PRIMITIVE  shift, and go to state 19
    T_ADDRESS         shift, and go to state 20

    LOGIC            go to state 51
    LOGIC2           go to state 52
    LOGIC3           go to state 53
    LOGIC4           go to state 54
    LOGIC5           go to state 55
    LOGIC6           go to state 56
    LOGIC7           go to state 57
    LOGIC8           go to state 58
    SHIFT            go to state 59
    EXPR             go to state 60
    EXPR2            go to state 61
    VALUE_WITH_FUNC  go to state 62
    VALUE            go to state 63
    ARRAY            go to state 34
    FUNC_EVOKE       go to state 64


State 9

   56 JUMP: T_GOTO . T_VARIABLE T_SEMICOLON

    T_VARIABLE  shift, and go to state 65


State 10

   64 IF: T_IF . T_LBRACKET LOGIC T_RBRACKET T_LCURLBRACKET STATEMENT_LIST T_RCURLBRACKET ELSE_IF_LIST
   65   | T_IF . T_LBRACKET LOGIC T_RBRACKET STATEMENT ELSE_IF_LIST
   66 ELSE: T_IF . T_LBRACKET LOGIC T_RBRACKET T_LCURLBRACKET STATEMENT_LIST T_RCURLBRACKET ELSE_IF_LIST T_ELSE T_LCURLBRACKET STATEMENT_LIST T_RCURLBRACKET
   67     | T_IF . T_LBRACKET LOGIC T_RBRACKET STATEMENT ELSE_IF_LIST T_ELSE T_LCURLBRACKET STATEMENT_LIST T_RCURLBRACKET
   68     | T_IF . T_LBRACKET LOGIC T_RBRACKET T_LCURLBRACKET STATEMENT_LIST T_RCURLBRACKET ELSE_IF_LIST T_ELSE STATEMENT
   69     | T_IF . T_LBRACKET LOGIC T_RBRACKET STATEMENT ELSE_IF_LIST T_ELSE STATEMENT

    T_LBRACKET  shift, and go to state 66


State 11

   60 CONTROL: T_WHILE . T_LBRACKET LOGIC T_RBRACKET T_LCURLBRACKET STATEMENT_LIST T_RCURLBRACKET

    T_LBRACKET  shift, and go to state 67


State 12

   61 CONTROL: T_FOR . T_LBRACKET ASSIGN T_SEMICOLON LOGIC T_SEMICOLON ASSIGN T_RBRACKET T_LCURLBRACKET STATEMENT_LIST T_RCURLBRACKET
   62        | T_FOR . T_LBRACKET LOGIC T_SEMICOLON ASSIGN T_RBRACKET T_LCURLBRACKET STATEMENT_LIST T_RCURLBRACKET

    T_LBRACKET  shift, and go to state 68


State 13

   63 CONTROL: T_DO . T_LCURLBRACKET STATEMENT_LIST T_RCURLBRACKET T_WHILE T_LBRACKET LOGIC T_RBRACKET T_SEMICOLON

    T_LCURLBRACKET  shift, and go to state 69


State 14

  108 VALUE: T_SUB . T_NUMBER

    T_NUMBER  shift, and go to state 70


State 15

  110 VALUE: T_MULT . T_VARIABLE
  115 VALUE_FOR_STORE: T_MULT . T_VARIABLE

    T_VARIABLE  shift, and go to state 71


State 16

  107 VALUE: T_NUMBER .

    $default  reduce using rule 107 (VALUE)


State 17

  109 VALUE: T_VARIABLE .
  113 ARRAY: T_VARIABLE . T_LSQR T_NUMBER T_RSQR
  114 VALUE_FOR_STORE: T_VARIABLE .
  116 ARRAY_FOR_STORE: T_VARIABLE . T_LSQR T_NUMBER T_RSQR

    T_LSQR  shift, and go to state 72
